# react-dashboard-project

./: BUILD.bazel  README.md  WORKSPACE  build.sh  env.ci.js  env.js  index.html  package.json  postcss.config.js  server.js  tsconfig.json  tslint.json  webpack.config.js
app/: BUILD  main.go
app/server/: BUILD  api.go  server.go
docs/: main.md
src/: App.tsx  constants.ts  definitions.ts  index.dev.tsx  index.prod.tsx  index.tsx  routes.ts  types.ts
src/__tests__/: routes.test.ts
src/api/: api.ts  auth.ts  clusters.ts  containers.ts  groups.ts  index.tsx  metrics.ts  namespaces.ts  nodes.ts  pipelines.ts  streamfunctions.ts  topics.ts  users.ts
src/assets/scss/: fonts.scss  icons.scss  index.scss  layout.scss
src/components/: Collapse.tsx
src/components/ActionBar/: ActionBar.scss  ActionBar.tsx  ClusterActions.tsx  ContainerActions.tsx  FilterBar.tsx  GroupActions.tsx  NamespaceActions.tsx  NodeActions.tsx  PipelineActions.tsx  TopicActions.tsx
src/components/Authentication/: PrivateRoute.tsx
src/components/Breadcrumbs/: BreadcrumbList.tsx  Breadcrumbs.scss  Breadcrumbs.tsx  BreadcrumbsPageItem.tsx  BreadcrumbsPopoverItem.tsx  BreadcrumbsTextItem.tsx  SearchClusters.tsx  SearchContainers.tsx  SearchGroups.tsx  SearchNamespaces.tsx  SearchNodes.tsx  SearchTopicsPipelines.tsx
src/components/BrowseViewModeToggler/: BrowseViewModeToggler.tsx
src/store/: constants.ts  index.ts  root-reducer.ts  selectors.ts
src/util/: classes.ts  fields-descriptor.ts  formating.ts  hoc.ts  misc.ts  pager.ts  query-string.ts  routes.tsx  storage.ts
(+376 files in other folders)
