package(default_visibility = ["//visibility:public"])

load(
  "@io_bazel_rules_docker//container:container.bzl",
  "container_image",
  "container_push",
)

container_image(
  name = "ui-server",
  base = "@streamlio_base//image",
  files = [
    "//app:streamlio-ui"
  ],
  directory = "/streamlio",
  workdir = "/streamlio",
  symlinks = {
    "/usr/local/bin/streamlio-ui"  : "/streamlio/streamlio-ui",
   },
)

container_image(
  name = "ui-frontend",
  base = ":ui-server",
  tars =[
    "bundle.tar.gz",
  ],
  directory = "/streamlio/public",
)

container_image(
  name = "streamlio-ui",
  base = ":ui-frontend",
)
